--- a/src/main/java/com/dyw/client/form/DataAnalysisForm.form
+++ b/src/main/java/com/dyw/client/form/DataAnalysisForm.form
@@ -75,12 +75,22 @@
               </component>
               <component id="8ce27" class="javax.swing.JButton" binding="exportButton">
                 <constraints>
-                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <font size="20"/>
                   <text value="导出"/>
+                </properties>
+              </component>
+              <component id="f9f82" class="javax.swing.JButton" binding="openChartButton">
+                <constraints>
+                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="0" bottom="0" right="50" weightx="0.0" weighty="0.0" ipadx="20"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="柱状图"/>
                 </properties>
               </component>
             </children>
